Day Creek Marketplace 1.0  /site.css

--- a/site.css
+++ b/site.css
@@ -409,7 +409,7 @@ strong {
             position: relative;
             background: $primary; 
             border-radius: 50%;
-            transition: color 0.3s ease;
+            transition: all 0.3s ease;
         }
         .fab {
             position: absolute;
@@ -419,11 +419,12 @@ strong {
             font-size: 1.125rem;
             line-height: normal;
             color: $secondary_text;
-            transition: color 0.3s ease;
+            transition: all 0.3s ease;
         }
     }
     .social_icon:hover {
         div {
+            border: 1px solid $primary;
             background: $secondary_text;    
         }
         .fab {
