Day Creek Marketplace 1.0  /site.css

--- a/site.css
+++ b/site.css
@@ -407,6 +407,7 @@ strong {
             width: 30px;
             height: 30px;
             position: relative;
+            border: 1px solid #FFF;
             background: $primary; 
             border-radius: 50%;
             transition: all 0.3s ease;
