--- a/site.css
+++ b/site.css
@@ -1318,7 +1318,7 @@ footer {
     font-style: italic;
     font-size: 1.375rem;
     text-transform: uppercase;
-    color: $secondary_text;
+    color: $primary;
 }
 .store_list_name {
     margin: 0 20px;
