--- a/site.css
+++ b/site.css
@@ -1459,6 +1459,7 @@ footer {
     }
     img {
         padding: 10px;
+        max-height: 100%;
         position: absolute;
         top: 50%;
         left: 50%;
